[package]
name = "Pana"
version = "0.0.0"
description = "Pana"
authors = ["horus"]
license = "MIT"
repository = "https://github.com/nubiv/pana"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-all", "macos-private-api", "path-all"] }
window-vibrancy = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
llm = { git = "https://github.com/rustformers/llm.git"}
# llm-chain-llama = { git = "https://github.com/sobelio/llm-chain"}
llm-chain = { git = "https://github.com/sobelio/llm-chain"}
tokio = { version = "1.28.2", features = ["full"] }
anyhow = '1.0'
thiserror = '1.0.40'
reqwest = {version = "0.11.18", features = ["stream"] }
futures-util = "0.3.28"
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
