[package]
name = "pana"
version = "0.0.0"
description = "pana"
authors = ["horus"]
license = "MIT"
repository = "https://github.com/nubiv/pana"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "macos-private-api"] }
window-vibrancy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
llm = { git = "https://github.com/rustformers/llm"}
# llm-chain-llama = { git = "https://github.com/sobelio/llm-chain"}
llm-chain = { git = "https://github.com/sobelio/llm-chain"}
tokio = { version = "1.29", features = ["full"] }
anyhow = '1.0'
thiserror = '1.0'
reqwest = {version = "0.11", features = ["stream"] }
futures-util = "0.3"
rand = "0.8"
sled = "0.34.7"
chrono = "0.4.26"

[profile.dev]
panic = "unwind" 
codegen-units = 256 
lto = false 
opt-level = 1 

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
